--- a/index.html
+++ b/index.html
@@ -33,4 +33,5 @@
     </div>
   </body>
   <script src="./js/list.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Sortable/1.15.0/Sortable.min.js"></script>
 </html>
